[package]
name = "coinmarket_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
derive_builder = "0.20.0"
serde_json = "1.0.118"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
tracing = "0.1.40"
async-trait = "0.1.80"
task-local-extensions = "0.1.4"
reqwest-impersonate = { version = "0.11.86", features = ["cookies", "json"] }
rustls = { version = "0.23.10", features = ["ring"] }
serde_derive = "1.0.204"
